--- a/about-us.html
+++ b/about-us.html
@@ -19,17 +19,17 @@
 
     <!-- main section -->
 
-    <section class="pb-24 min-h-screen"
+    <section class=""
         style="background: linear-gradient(rgba(0, 0, 0, 0.804),rgba(0, 0, 0, 0.82)), url(https://4kwallpapers.com/images/walls/thumbs_3t/13788.png) center/cover no-repeat;">
         <div id="navbar"></div>
-        <div class="flex items-center justify-center w-full min-h-screen sm:pt-0 pt-16">
+        <div class="flex items-center justify-center w-full min-h-screen sm:pt-10">
             <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-                <div class="mb-14 text-center">
+                <div class="text-center">
                     <span
                         class="py-1 px-4 bg-indigo-100 rounded-full text-xs font-medium text-indigo-600 text-center">About
                         Us
                     </span>
-                    <h2 class="md:text-4xl text-2xl text-center font-bold text-gray-100 py-5">
+                    <h2 class="md:text-5xl text-2xl text-center font-bold text-gray-100 py-5">
                         Professional Broker, Leading Technology
                     </h2>
                     <p class="text-lg font-normal text-gray-300 max-w-md md:max-w-2xl mx-auto">
