--- a/pricing.html
+++ b/pricing.html
@@ -127,6 +127,39 @@
         </div>
     </section>
 
+    <!-- Dealing -->
+
+    <div class="w-full grid gap-7 p-4 max-w-7xl mx-auto md:mt-20 mt-10">
+        <div class="grid gap-3">
+            <h2 class="text-center text-gray-900 md:text-3xl text-2xl font-bold font-manrope leading-10">Excellent
+                Market Depth</h2>
+            <p class=" w-full mx-auto text-center text-gray-500 font-normal leading-relaxed">As high degree of
+                transparency is paramount to gaining the trust of clients and regulators, we provide you with up to 8
+                layers of market depth with real-time market volume and liquidity insight data. This allows you to
+                visualize market volatility and get a head start on trading. </p>
+        </div>
+        <div class="grid grid-cols-1 md:gap-14  items-center lg:grid-cols-2 md:mt-5 gap-5">
+            <div class="w-full  sm:w-auto lg:w-full">
+                <img src="https://media.istockphoto.com/id/1256148352/fi/valokuva/maantieteellinen-merkki-et%C3%A4isyydest%C3%A4-ja-suunnasta-lontooseen-ja-new-yorkiin-arnaiaan.jpg?s=612x612&w=0&k=20&c=kA8BtuakmV-440W2-02-2DglOjPuZ9gDYU6n2c_KzMs="
+                    alt="Dashboard image" class="w-full rounded-lg lg:h-auto ">
+            </div>
+            <div class="w-full ">
+                <h1
+                    class=" md:pb-5 text-center text-gray-900 font-bold font-manrope md:text-3xl text-2xl lg:text-left ">
+                    99.99% Stability
+                </h1>
+                <h2 class="md:pb-5 text-center text-gray-900 font-semibold font-manrope text-xl lg:text-left">
+                    Auto-Failover Support
+                </h2>
+                <p class=" text-gray-500 text-center lg:text-left">
+                    CapitalDoo’s trading speed is highly efficient and stable. If the quotation source is interrupted,
+                    data centers in London and New York will automatically switch to disaster recovery mode, and quickly
+                    solve any issues to minimize trader’s risk.
+                </p>
+            </div>
+        </div>
+    </div>
+
     <!-- No Dealing Desk (NDD) -->
 
     <section class="lg:pt-16 pt-0  p-4 h-full flex items-center justify-center">
@@ -323,7 +356,7 @@
                 opportunity.
             </p>
 
-              <!-- Animated Number Counter -->
+            <!-- Animated Number Counter -->
             <section id="counter-section" class="grid gap-12 md:grid-cols-4 grid-cols-2 md:gap-16 md:pt-20 py-8">
                 <!-- Block -->
                 <article class="flex items-center justify-center flex-col text-center">
