--- a/technology.html
+++ b/technology.html
@@ -26,16 +26,16 @@
     <!-- main section -->
 
 
-    <section class="pb-24 min-h-screen"
+    <section class=""
         style="background: linear-gradient(rgba(0, 0, 0, 0.804),rgba(0, 0, 0, 0.82)), url(https://4kwallpapers.com/images/walls/thumbs_3t/13788.png) center/cover no-repeat;">
         <div id="navbar"></div>
-        <div class="flex items-center justify-center w-full min-h-screen sm:pt-0 pt-16">
+        <div class="flex items-center justify-center w-full min-h-screen sm:pt-10">
             <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-                <div class="mb-14 text-center">
+                <div class="text-center">
                     <span
                         class="py-1 px-4 bg-indigo-100 rounded-full text-xs font-medium text-indigo-600 text-center">Technology
                     </span>
-                    <h2 class="md:text-4xl text-2xl text-center font-bold text-gray-100 py-5">
+                    <h2 class="md:text-5xl text-2xl text-center font-bold text-gray-100 py-5">
                         Cutting Edge Technology
                     </h2>
                     <p class="text-lg font-normal text-gray-300 max-w-md md:max-w-2xl mx-auto">
@@ -313,7 +313,37 @@
         </div>
     </div>
 
+    <!-- banner -->
 
+    <section class="bg-white md:mt-16">
+        <div class="gap-16 items-center py-8 px-5 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
+            <div class="font-light text-gray-500 sm:text-lg ">
+                <h2 class="mb-4 md:text-4xl text-3xl leading-normal tracking-tight font-semibold text-gray-900  ">A
+                    Dedicated Team Ready to Serve
+                </h2>
+                <p class="mb-6">Our team has extensive industry experience in providing you with 24/7 multilingual
+                    professional customer support, efficiently and resolve any issues immediately.
+                    <br><br>
+                    Our comprehensive technical solutions backed by Doo Tech adheres to execute your trades efficiently
+                    even at peak hours.
+                </p>
+                <div class="flex items-center gap-12">
+                    <p>Extensive experience <span class="block font-semibold text-black">20 +Years</span></p>
+                    <p>Round the clock service
+                        <span class="block font-semibold text-black">24/7/365</span>
+                    </p>
+                </div>
+                <div class="flex items-center gap-12 md:mt-10 mt-6">
+                    <p>Technical specialists<span class="block font-semibold text-black">300 +</span></p>
+                </div>
+            </div>
+            <div class="md:pt-0 pt-5">
+                <img class="w-full rounded-lg"
+                    src="https://img.freepik.com/free-photo/three-men-discussing-ideas-white-wall-indian-nationality_1157-47451.jpg?t=st=1740196708~exp=1740200308~hmac=d24f3c6719cf6cf4c85caa35199cdf04aa062bd493910f08ea5d2f547e84e4d4&w=1060"
+                    alt="office content 1">
+            </div>
+        </div>
+    </section>
 
     <!-- cards -->
 
@@ -416,21 +446,21 @@
 
     <!-- slider -->
 
-    <div class="max-w-7xl w-full mx-auto p-4 ">
+    <div class="max-w-7xl w-full mx-auto p-4 md:mt-20">
         <!--HTML CODE-->
         <div class=" w-full relative">
             <div class="swiper default-carousel swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div
+                        <div style="background: linear-gradient(rgba(0, 0, 0, 0.702),rgba(0, 0, 0, 0.694)), url(https://plus.unsplash.com/premium_photo-1682629283045-ddbf1ab08363?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) center/cover no-repeat;"
                             class="bg-indigo-50 rounded-2xl md:h-96 py-5 flex flex-col md:px-20 justify-center items-center">
-                            <h2 class="p-4  text-center text-gray-900 font-bold font-manrope md:text-4xl text-3xl  ">
-                                Robust <span class="text-indigo-600">Infrastructure </span> </h2>
-                            <h3 class="p-4 text-center text-gray-900 font-bold font-manrope md:text-2xl text-xl ">
+                            <h2 class="p-4  text-center text-gray-100 font-bold font-manrope md:text-4xl text-3xl  ">
+                                Robust <span class="bg-indigo-600 px-2 rounded-lg">Infrastructure </span> </h2>
+                            <h3 class="p-4 text-center text-gray-100 font-bold font-manrope md:text-2xl text-xl ">
                                 Executing Trades with Advanced Network Architecture
 
                             </h3>
-                            <p class="text-center px-4 text-gray-500">Thanks to the strong technological strength of Doo
+                            <p class="text-center px-4 text-gray-300">Thanks to the strong technological strength of Doo
                                 Tech, we have reached in-depth cooperation with Level 3, NTT, Cogent Communications,
                                 China Unicom, China Telecom and other international first-class backbone network service
                                 providers to achieve cross-interconnection with global backbone network nodes.
@@ -444,14 +474,14 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div
+                        <div style="background: linear-gradient(rgba(0, 0, 0, 0.702),rgba(0, 0, 0, 0.694)), url(https://images.unsplash.com/photo-1536408525595-8a6c1d3d71ea?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) center/cover no-repeat;"
                             class="bg-indigo-50 rounded-2xl md:h-96 py-5 flex flex-col md:px-20 justify-center items-center">
-                            <h2 class="p-4  text-center text-gray-900 font-bold font-manrope md:text-4xl text-3xl  ">
-                                Robust <span class="text-indigo-600">Infrastructure </span> </h2>
-                            <h3 class="p-4 text-center text-gray-900 font-bold font-manrope md:text-2xl text-xl ">
+                            <h2 class="p-4  text-center text-gray-100 font-bold font-manrope md:text-4xl text-3xl  ">
+                                Robust <span class="bg-indigo-600 px-2 rounded-lg">Infrastructure </span> </h2>
+                            <h3 class="p-4 text-center text-gray-100 font-bold font-manrope md:text-2xl text-xl ">
                                 Rigorous Data Center Layout for International Connectivity
                             </h3>
-                            <p class="text-center px-4 text-gray-500">We cooperate with Equinix, the world's leading
+                            <p class="text-center px-4 text-gray-300">We cooperate with Equinix, the world's leading
                                 data operator, to deploy data center nodes in London (LD5), New York (NY5), Hong Kong
                                 (HK2), Singapore (SG1), and other financial centers. Our Tier 4 server rooms are of
                                 top-level infrastructure that guarantees a prime trading environment.
@@ -459,14 +489,14 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div
+                        <div style="background: linear-gradient(rgba(0, 0, 0, 0.702),rgba(0, 0, 0, 0.694)), url(https://images.unsplash.com/photo-1521099643057-198b199b7b64?q=80&w=1819&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) center/cover no-repeat;"
                             class="bg-indigo-50 rounded-2xl md:h-96 py-5 flex flex-col md:px-20 justify-center items-center">
-                            <h2 class="p-4  text-center text-gray-900 font-bold font-manrope md:text-4xl text-3xl  ">
-                                Robust <span class="text-indigo-600">Infrastructure </span> </h2>
-                            <h3 class="p-4 text-center text-gray-900 font-bold font-manrope md:text-2xl text-xl ">
+                            <h2 class="p-4  text-center text-gray-100 font-bold font-manrope md:text-4xl text-3xl  ">
+                                Robust <span class="bg-indigo-600 px-2 rounded-lg">Infrastructure </span> </h2>
+                            <h3 class="p-4 text-center text-gray-100 font-bold font-manrope md:text-2xl text-xl ">
                                 Top Hardware Facilities and Ultimate Performance
                             </h3>
-                            <p class="text-center px-4 text-gray-500">The entire Dell EMC server architecture, equipped
+                            <p class="text-center px-4 text-gray-300">The entire Dell EMC server architecture, equipped
                                 with Intel Xeon® E7 and AMD EPYC® 7 series central processing units, seamlessly
                                 processes real-time quotes and client’s orders.
                             </p>
@@ -522,7 +552,7 @@
                 opportunity.
             </p>
 
-              <!-- Animated Number Counter -->
+            <!-- Animated Number Counter -->
             <section id="counter-section" class="grid gap-12 md:grid-cols-4 grid-cols-2 md:gap-16 md:pt-20 py-8">
                 <!-- Block -->
                 <article class="flex items-center justify-center flex-col text-center">
