--- a/vps.html
+++ b/vps.html
@@ -19,16 +19,16 @@
 
 
 
-    <section class="pb-24 min-h-screen"
+    <section class=""
         style="background: linear-gradient(rgba(0, 0, 0, 0.804),rgba(0, 0, 0, 0.82)), url(https://4kwallpapers.com/images/walls/thumbs_3t/13788.png) center/cover no-repeat;">
         <div id="navbar"></div>
-        <div class="flex items-center justify-center w-full min-h-screen sm:pt-0 pt-16">
+        <div class="flex items-center justify-center w-full min-h-screen sm:pt-10">
             <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
                 <div class="mb-14 text-center">
                     <span
                         class="py-1 px-4 bg-indigo-100 rounded-full text-xs font-medium text-indigo-600 text-center">VPS
                     </span>
-                    <h2 class="md:text-4xl text-2xl text-center font-bold text-gray-100 py-5">
+                    <h2 class="md:text-5xl text-2xl text-center font-bold text-gray-100 py-5">
                         VPS for Uninterrupted Trading
                     </h2>
                     <p class="text-lg font-normal text-gray-300 max-w-md md:max-w-2xl mx-auto">
@@ -97,6 +97,58 @@
         </div>
 
     </div>
+
+    <!-- What is VPS Trading? -->
+
+    <section class="lg:pt-16 pt-0  p-4 h-full flex items-center justify-center">
+        <div
+            class="rounded-2xl max-w-7xl mx-auto bg-indigo-50 md:px-10 py-10 overflow-hidden m-5 lg:m-0 2xl:py-10 xl:py-10  lg:rounded-tl-2xl lg:rounded-bl-2xl ">
+            <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+                <div class="grid grid-cols-1 md:gap-14  items-center lg:grid-cols-12">
+                    <div class="w-full xl:col-span-6 lg:col-span-6 2xl:-mx-5 xl:-mx-0">
+                        <h1
+                            class="md:pt-8 md:pb-5 text-center text-gray-900 font-bold font-manrope md:text-3xl text-2xl lg:text-left leading-[70px]">
+                            What is VPS Trading?
+                        </h1>
+                        <h2
+                            class="pt-2 md:pb-2 text-center text-gray-900 font-semibold font-manrope text-xl lg:text-left ">
+                            24/7/365 Operation
+
+                        </h2>
+                        <p class=" text-gray-500 text-center lg:text-left">
+                            A VPS trading dedicated server is equivalent to a virtual computer running independently 24
+                            hours a day, so that the connection time between the virtual platform and the broker's
+                            server can reach 99.99%, in order for the operation of expert advisors (EA) runs
+                            uninterrupted.
+                        </p>
+                        <h2
+                            class="pt-4 md:pb-2 text-center text-gray-900 font-semibold font-manrope text-xl lg:text-left ">
+                            Safe and Stable
+                        </h2>
+                        <p class=" text-gray-500 text-center lg:text-left">
+                            During periods of severe market fluctuations, VPS can provide you with a more secure and
+                            stable trading environment, eliminating obstacles such as computer viruses and power
+                            outages.
+                        </p>
+                        <h2
+                            class="pt-4 md:pb-2 text-center text-gray-900 font-semibold font-manrope text-xl lg:text-left ">
+                            Eliminate Latency
+                        </h2>
+                        <p class=" text-gray-500 text-center lg:text-left">
+                            VPS solution offering traders minimum pings, removing unnecessary delays in the trading
+                            process.
+                        </p>
+
+                    </div>
+                    <div class="w-full xl:col-span-6  lg:col-span-6 block">
+                        <div class="w-full  sm:w-auto lg:w-full">
+                            <img src="./Docs/Assets/cloud.png" alt=" image" class="" class="w-full lg:h-auto ">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- steps -->
     <div
@@ -378,9 +430,40 @@
 
     </main>
 
-    <!-- Subscribe -->
+    <!-- contact Us -->
 
     <div class="w-full grid gap-7 p-4 max-w-4xl mx-auto md:mt-20 mt-10">
+        <div class="grid gap-3">
+            <h2 class="text-center text-gray-900 md:text-3xl text-2xl font-bold font-manrope leading-10">
+                Contact US</h2>
+            <p class="xl:max-w-2xl w-full mx-auto text-center text-gray-500 text-base font-normal leading-relaxed">Lorem
+                Kindly leave your contact information, and our dedicated consultant will be in touch with you within 1
+                working day.
+
+            </p>
+        </div>
+        <div class="grid gap-4 md:grid-cols-2 grid-cols-1 md:pt-6">
+            <input type="text"
+                class="w-full h-14 text-gray-600 placeholder-gray-400  bg-transparent text-lg  rounded-lg border border-gray-200 focus:outline-none pl-4 "
+                placeholder="Surname">
+            <input type="text"
+                class="w-full h-14 text-gray-600 placeholder-gray-400  bg-transparent text-lg  rounded-lg border border-gray-200 focus:outline-none pl-4 "
+                placeholder="Name">
+            <input type="text"
+                class="w-full h-14 text-gray-600 placeholder-gray-400 bg-transparent text-lg  rounded-lg border border-gray-200 focus:outline-none pl-4 "
+                placeholder="Email">
+            <input type="text"
+                class="w-full h-14 text-gray-600 placeholder-gray-400 bg-transparent text-lg  rounded-lg border border-gray-200 focus:outline-none pl-4 "
+                placeholder="Phone">
+            <button
+                class="w-full md:col-span-2 h-12 text-white text-base font-semibold leading-6 rounded-lg transition-all duration-700 hover:bg-indigo-800 bg-indigo-600 shadow-sm">Send</button>
+        </div>
+    </div>
+
+
+    <!-- Subscribe -->
+
+    <div class="w-full grid gap-7 p-4 max-w-4xl mx-auto md:mt-24 mt-10">
         <div class="grid gap-3">
             <h2 class="text-center text-gray-900 md:text-3xl text-2xl font-bold font-manrope leading-10">Ready to
                 Superpower Your
@@ -422,14 +505,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
