--- a/metatrader4.html
+++ b/metatrader4.html
@@ -159,18 +159,21 @@
                 <div id="Operating_Round_the_Clock" class="tab-content fadeIn hidden">
                     <img src="https://capitaldoo.com/trading-platform/metatrader4/images/mt4-advisor-img-02.jpg"
                         alt="Market Image" class="rounded-lg shadow-md md:h-80 w-full ">
-                    <p class="mt-4 text-gray-700">Stays active 24 hours a day, while automatically executing trades based on your trading conditions to yield financial gains.                    </p>
+                    <p class="mt-4 text-gray-700">Stays active 24 hours a day, while automatically executing trades
+                        based on your trading conditions to yield financial gains. </p>
                 </div>
                 <div id="back" class="tab-content fadeIn hidden"> <img
                         src="https://capitaldoo.com/trading-platform/metatrader4/images/mt4-advisor-img-03.jpg"
                         alt="Market Image" class="rounded-lg shadow-md md:h-80 w-full ">
-                    <p class="mt-4 text-gray-700">Users can evaluate and adjust their trading strategies through back testing and view the statistics of profitability to make the best trading decisions.
+                    <p class="mt-4 text-gray-700">Users can evaluate and adjust their trading strategies through back
+                        testing and view the statistics of profitability to make the best trading decisions.
                     </p>
                 </div>
                 <div id="Extensive_Features" class="tab-content fadeIn hidden">
                     <img src="https://capitaldoo.com/trading-platform/metatrader4/images/mt4-advisor-img-04.jpg"
                         alt="Market Image" class="rounded-lg shadow-md md:h-80 w-full ">
-                    <p class="mt-4 text-gray-700">Supports EA automated trading and multi-account management system, incorporating a high degree of versatility and customization. Available in multiple languages.
+                    <p class="mt-4 text-gray-700">Supports EA automated trading and multi-account management system,
+                        incorporating a high degree of versatility and customization. Available in multiple languages.
                     </p>
                 </div>
             </div>
@@ -301,9 +304,11 @@
                     <h4 class="text-base font-semibold text-gray-900 mb-2 capitalize transition-all duration-500 ">
                         MetaTrader 4
                     </h4>
-                    <p class="text-2xl font-normal text-gray-500 transition-all duration-500 leading-5 mb-4">
-                        ❌ 4 ❌
-
+                    <p
+                        class="text-2xl flex flex-col gap-3 mt-3 justify-center items-center font-normal text-gray-500 transition-all duration-500">
+                        <span>❌</span>
+                        4
+                        <span>❌</span>
                     </p>
 
                 </div>
@@ -314,10 +319,13 @@
                     <h4 class="text-base font-semibold text-gray-900 mb-2 capitalize transition-all duration-500 ">
                         MetaTrader 5
                     </h4>
-                    <p class="text-2xl font-normal text-gray-500 transition-all duration-500 leading-5 mb-4">
-                        ✅ 6 ✅
-                    </p>
 
+                    <p
+                        class="text-2xl flex flex-col gap-3 mt-3 justify-center items-center font-normal text-gray-500 transition-all duration-500">
+                        <span>✅</span>
+                        6
+                        <span>✅</span>
+                    </p>
                 </div>
             </div>
         </div>
@@ -402,9 +410,15 @@
 
                 </p>
                 <div class="flex items-center justify-center gap-2 flex-wrap mt-6">
-                    <button class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i class="fa-brands fa-windows"></i>Windows</button>
-                    <button class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i class="fa-brands fa-apple"></i>MacOS</button>
-                    <button class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i class="fa-solid fa-desktop"></i>Web</button>
+                    <button
+                        class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i
+                            class="fa-brands fa-windows"></i>Windows</button>
+                    <button
+                        class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i
+                            class="fa-brands fa-apple"></i>MacOS</button>
+                    <button
+                        class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i
+                            class="fa-solid fa-desktop"></i>Web</button>
                 </div>
             </div>
         </div>
@@ -422,8 +436,12 @@
                     currencies, stocks and other securities anytime, anywhere with CapitalDoo MT5 mobile terminal.
                 </p>
                 <div class="flex items-center justify-center gap-2 flex-wrap mt-6">
-                    <button class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i class="fa-brands fa-android"></i>Andorid</button>
-                    <button class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i class="fa-brands fa-apple"></i>IOS</button>
+                    <button
+                        class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i
+                            class="fa-brands fa-android"></i>Andorid</button>
+                    <button
+                        class="px-4 border border-gray-500 text-gray-600 py-2 hover:bg-gray-100 transition-all duration-500 rounded-full flex items-center gap-2"><i
+                            class="fa-brands fa-apple"></i>IOS</button>
                 </div>
             </div>
         </div>
