--- a/pricing.html
+++ b/pricing.html
@@ -160,6 +160,49 @@
         </div>
     </div>
 
+    <!-- graph -->
+
+    <div class="w-full grid gap-7 p-4 max-w-7xl mx-auto md:mt-20 mt-10">
+        <div class="grid gap-3">
+            <h2 class="text-center text-gray-900 md:text-3xl text-2xl font-bold font-manrope leading-10">Competitive
+                Trading Costs in the Industry
+            </h2>
+        </div>
+        <div class="grid grid-cols-1 md:gap-14  items-center lg:grid-cols-2 md:mt-5 gap-5">
+            <div class="w-full">
+                <p class=" text-gray-500 text-center lg:text-left">
+                    Low spread trading
+                </p>
+                <h2 class="md:pt-2 text-center text-gray-900 font-semibold font-manrope text-xl lg:text-left">
+                    Spreads as low as 0.0 pips
+                </h2>
+                <p class=" text-gray-500 pt-10 text-center lg:text-left">
+                    Costs lower than the industry's average of
+                </p>
+                <h2 class="md:pt-2 text-center text-gray-900 font-semibold font-manrope text-xl lg:text-left">
+                    1 pips+
+                </h2>
+                <p class=" text-gray-500 pt-10 text-center lg:text-left">
+                    Enjoy savings per trade
+                </p>
+                <h2 class="md:pt-2 text-center text-gray-900 font-semibold font-manrope text-xl lg:text-left">
+                    USD 10
+                </h2>
+            </div>
+            <div class="flex items-center justify-center gap-5">
+                <div class="flex flex-col gap-5 -mt-5">
+                    <img src="https://capitaldoo.com/trading/pricing-model/images/Man_Utd_x_Doo_Prime_desktop.png" alt="">
+                    <img src="./Docs/Assets/gain.svg" class="h-8" alt="">
+                    <img src="./Docs/Assets/ig.svg" class="h-8" alt="">
+                    <img src="./Docs/Assets/markets.svg" class="h-8" alt="">
+                    <img src="./Docs/Assets/swissquote.svg" class="h-8" alt="">
+                    <img src="./Docs/Assets/fxcm.svg" class="h-8" alt="">
+                </div>
+                <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- No Dealing Desk (NDD) -->
 
     <section class="lg:pt-16 pt-0  p-4 h-full flex items-center justify-center">
@@ -531,6 +574,37 @@
     <script src="./Docs/Javascripts/global.js"></script>
     <script src="./Docs/Javascripts/navbar-2.js"></script>
     <script src="./Docs/Javascripts/footer.js"></script>
+    <script type="text/javascript">
+        window.onload = function () {
+            var chart = new CanvasJS.Chart("chartContainer",
+                {
+                    axisY2: {
+                        titleFontColor: "steelBlue",
+                        lineThickness: 5
+                    },
+                    data: [
+                        {
+                            type: "column",
+                            axisYType: "secondary",
+                            // color
+                            color: "#4f46e5",
+                            dataPoints: [
+                                { x: 10, y: 0 },
+                                { x: 20, y: 0 },
+                                { x: 30, y: 0 },
+                                { x: 40, y: 0 },
+                                { x: 50, y: 0 },
+
+                            ]
+                        }
+                    ]
+                });
+
+            chart.render();
+        }
+    </script>
+    <script type="text/javascript" src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
+
 </body>
 
 </html>
