--- a/pricing.html
+++ b/pricing.html
@@ -189,9 +189,11 @@
                     USD 10
                 </h2>
             </div>
-            <div class="flex items-center justify-center gap-5">
+            <div class="flex items-center justify-center gap-5 relative">
+                <!-- <div class="absolute w-16 h-5 bg-white md:-bottom-[10px] -bottom-[10px] right-0 z-10"></div> -->
                 <div class="flex flex-col gap-5 -mt-5">
-                    <img src="https://capitaldoo.com/trading/pricing-model/images/Man_Utd_x_Doo_Prime_desktop.png" alt="">
+                    <img src="https://capitaldoo.com/trading/pricing-model/images/Man_Utd_x_Doo_Prime_desktop.png"
+                        alt="">
                     <img src="./Docs/Assets/gain.svg" class="h-8" alt="">
                     <img src="./Docs/Assets/ig.svg" class="h-8" alt="">
                     <img src="./Docs/Assets/markets.svg" class="h-8" alt="">
